legacy/differential_testing/regression_ts/gcc_reg_cb/results/gcc482/save_st/priority-1.c-4.8.2-2.out.txt
priority-1.c: In function ‘foo’:
priority-1.c:9:5: error: ‘for’ loop initial declarations are only allowed in C99 mode
     for (int i = 0; i < 10; i++)
     ^
priority-1.c:9:5: note: use option -std=c99 or -std=gnu99 to compile your code
priority-1.c:14:33: error: conflicting types for ‘i’
     for (unsigned long long int i = 0; i < y; i++)
                                 ^
priority-1.c:9:14: note: previous definition of ‘i’ was here
     for (int i = 0; i < 10; i++)
              ^
priority-1.c:14:5: error: ‘for’ loop initial declarations are only allowed in C99 mode
     for (unsigned long long int i = 0; i < y; i++)
     ^
priority-1.c:19:14: error: conflicting types for ‘i’
     for (int i = 0; i < 10; i++)
              ^
priority-1.c:14:33: note: previous definition of ‘i’ was here
     for (unsigned long long int i = 0; i < y; i++)
                                 ^
priority-1.c:19:5: error: ‘for’ loop initial declarations are only allowed in C99 mode
     for (int i = 0; i < 10; i++)
     ^
priority-1.c:24:33: error: conflicting types for ‘i’
     for (unsigned long long int i = 0; i < y; i++)
                                 ^
priority-1.c:19:14: note: previous definition of ‘i’ was here
     for (int i = 0; i < 10; i++)
              ^
priority-1.c:24:5: error: ‘for’ loop initial declarations are only allowed in C99 mode
     for (unsigned long long int i = 0; i < y; i++)
     ^
